--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "node server.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
@@ -15,7 +16,9 @@
     "bootstrap-vue": "^2.16.0",
     "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
     "jquery": "^3.5.1",
+    "serve-static": "^1.14.1",
     "vue": "^2.6.12",
     "vue-chartjs": "^3.5.1"
   },
