--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue-carousel": "^0.18.0",
     "vue-chartjs": "^3.5.1",
     "vue-router": "^3.4.3",
+    "vue-ui-preloader": "^1.1.0",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
