--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
+    "firebase": "^8.2.2",
     "jquery": "^3.5.1",
     "mdbvue": "^6.7.1",
     "serve-static": "^1.14.1",
